// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runner component renders default 1`] = `
<Blueprint3.Button
  className="button-run"
  icon="play"
  onClick={[MockFunction]}
  text="Run"
/>
`;

exports[`Runner component renders running 1`] = `
<Blueprint3.Button
  active={true}
  className="button-run"
  icon="stop"
  onClick={[MockFunction]}
  text="Stop"
/>
`;
